# 2021_AI_Robot_Hackathon

./: README.en.md  README.md
d2c_dynamixel_operators/: CMakeLists.txt  package.xml
d2c_dynamixel_operators/include/d2c_dynamixel_operators/: d2c_joint_operator.h
d2c_dynamixel_operators/src/: d2c_dynamixel_operator.cpp
d2c_robot_description/: CMakeLists.txt  package.xml
d2c_robot_description/include/d2c_robot_description/: IK_Solver.hpp
d2c_robot_description/launch/: display.launch  gazebo.launch  test.launch
d2c_robot_description/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL
d2c_robot_description/src/: IK_Solver.cpp  kinematic.cpp
d2c_robot_description/urdf/: d2c_description.csv  d2c_description.urdf  d2c_robot.rviz  d2c_robot_description.urdf
d2c_robot_libs/: CMakeLists.txt  package.xml
d2c_robot_libs/include/d2c_robot_libs/: robot_node.hpp  serving_command.hpp
d2c_robot_libs/launch/: d2c_robot.launch
d2c_robot_libs/src/: d2c_control.cpp  robot_node.cpp  serving_command.cpp
d2c_robot_msgs/: CMakeLists.txt  package.xml
d2c_robot_msgs/msg/: D2cRobot.msg  DynamixelCommand.msg  JointPosition.msg
d2c_robot_teleop/: CMakeLists.txt  package.xml
d2c_robot_teleop/src/: d2c_robot_keyboard.cpp
