<?xml version="1.0"?>
<package format="2">
  <name>d2c_robot_description</name>
  <version>1.0.0</version>
  <description>d2c_robot_description package</description>

  <maintainer email="junghs1040@naver.com">seok2</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

</package>


