<?xml version="1.0"?>
<package format="2">
  <name>d2c_robot_libs</name>
  <version>0.0.0</version>
  <description>The d2c_robot_libs package</description>

  <maintainer email="seok2@todo.todo">seok2</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
